--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
             <h2>
                 <button type="button" id="start-button">Start</button>
             </h2>
+            
+            <div id="show-number"></div>
+            <!--Question 1-->
+            <P class="question">1. What kind of bear is best?</P>
+            <ul class="answers">
+            <input type="radio" name="q1" value="a" id="q1a"><label for="q1a">Black Bear</label><br/>
+            <input type="radio" name="q1" value="b" id="q1b"><label for="q1b">Battle Star Galatica</label><br/>
+            <input type="radio" name="q1" value="c" id="q1c"><label for="q1c">Beats</label><br/>
+            <input tpye="radio" name="q1" value="d" id="q1d"><lable for="q1d">Bears...Beats...BATTLE STAR GALATICA</lable><br/>
+            </ul>
+            <!--Question 2-->
+
         </section>
     </div>
 </body>
