added more questions to index

--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
             <input tpye="radio" name="q1" value="d" id="q1d"><lable for="q1d">Bears...Beats...BATTLE STAR GALATICA</lable><br/>
             </ul>
             <!--Question 2-->
+            <p class="question">2. What is micjeal scott's signature line?</p>
+            <ul class="answers">
+            <input tpye="radio" name="q2" value="a" id="q2a"><label for="q2a">I declare BANKRUPCY!!</label><br/>
+            <input type="radio" name="q2" value="b" id="q2b"><label for="q2b">I am beyonce always</label><br/>
+            <input tpye="radio" name="q2" value="c" id="q2c"><label for="q2c">i'm not </label><br/>
+            <input type="radio" name="q3" value="d" id="q2d"><label for="q3d"></label><br/>
+            </ul>
+            <!--Question 3-->
+            <p class="question">3. WHat is micheals prison character name?</p>
+            <ul class="answers">
+            <input type="radio" name="q3" value="a" id="q3a"><label for="q3a"></label><br/>
+            <input type="radio" name="q3" value="b" id="q3b"><label for="q3b"></label><br/>
+            <input tpye="radio" name="q4" value="c" id="q3c"><label for="q3c"></label><br/>
+            <input type="radio" name="q3" value="d" id="q3d"><label for="q4d"></label><br/>
+            </ul> 
+            <!--Question 4-->
+            <p class
+
 
         </section>
     </div>
