added the java script for the questions and added the functionallty of the buttons and checked for the right or wrong answers.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
 	<!-- JavaScript File & jQuery Lib -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
-	<script type="text/javascript" src="../trivia-game/assets/javascript/question.js"></script>
+	<script type="text/javascript" src="assets/javascript/question.js"></script>
 </body>
 </html>
